--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xl.android">
 
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Android"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         //欢迎页
         <activity
             android:name=".FirstActivity"
@@ -20,29 +25,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         //导航页
         <activity
             android:name=".FullViewPagerActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         //主界面
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
-
         //activity页面
-        <activity android:name=".activity.Activitys"/>
-        <activity android:name=".activity.ScondeActivity"/>
+        <activity android:name=".activity.Activitys" />
+        <activity android:name=".activity.ScondeActivity" />
         <!-- 隐士加载页面 -->
         <activity android:name=".activity.ThreeActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <action android:name="com.example.activity.intent.ThreeActivity" />
             </intent-filter>
         </activity>
-
         //handler页面
         <activity android:name=".handler.HandlerActivity" />
         <activity android:name=".handler.HandlerOneActivity" />
@@ -50,7 +51,27 @@
         <activity android:name=".handler.HandlerThreeActivity" />
         <activity android:name=".handler.HandlerFourActivity" />
         <activity android:name=".handler.HandlerFiveActivity" />
+        //广播接收与发送
+        <activity android:name=".broadcast.BroadcastActivity" />
 
+        <receiver android:name=".broadcast.BCR1" />
+        <receiver android:name=".broadcast.BCR2" />
+        <receiver android:name=".broadcast.BroadCastForOS">
+            <intent-filter>
+                <action android:name="android.intent.action.WALLPAPER_CHANGED" />
+            </intent-filter>
+        </receiver>
+
+        //内容提供接收与数据库操作
+        <activity android:name=".content.ContentpActivity"/>
+        <activity android:name=".content.AndroidFile"/>
+        <activity android:name=".content.AndroidSDFile"/>
+        <activity android:name=".content.ContentProviders"/>
+        <activity android:name=".content.ContentValue"/>
+        <activity android:name=".content.PreferenceActivitys"/>
+        <activity android:name=".content.SharedPreferencesActivity"/>
+        <activity android:name=".content.SQLiteDatabases"/>
+        <activity android:name=".content.SQLites"/>
     </application>
 
 </manifest>
