新增安卓控件动画，属性动画，修改部分原有代码!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
                 <action android:name="com.example.activity.intent.ThreeActivity" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.AnimationsActivity"/>
+
+
         //handler页面
         <activity android:name=".handler.HandlerActivity" />
         <activity android:name=".handler.HandlerOneActivity" />
