新增安卓对媒体控件MediaPlayer SurfasceView VedioView ,修改部分原有代码!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.AnimationsActivity"/>
+        <activity android:name=".view.MediaPlayerActivity"/>
 
 
         //handler页面
