新增安卓网路连接http webview以及xml,json数据的解析 ,修改部分原有代码!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
         android:allowBackup="true"
@@ -49,6 +51,9 @@
         </activity>
         <activity android:name=".view.AnimationsActivity"/>
         <activity android:name=".view.MediaPlayerActivity"/>
+        <activity android:name=".network.HttpActivity"/>
+        <activity android:name=".network.XmlAndJsonActivity"/>
+        <activity android:name=".network.WebActivity"/>
 
 
         //handler页面
