新增自定义视图：画笔，画布，路径和SurfaceView，更新部分原有代码,修改原有bug!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".network.AsycnTaskActivity"/>
         <activity android:name=".network.TcpAndSocketActivity"/>
         <activity android:name=".network.LoadNetWorkActivity"/>
+        <activity android:name=".view.SurfaceViewActivity"/>
 
 
         //handler页面
