新增安卓基础控件,更新部分原有代码,修改原有bug!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         <activity android:name=".view.SurfaceViewActivity"/>
         <activity android:name=".view.RecyclerViewActivity"/>
         <activity android:name=".view.SimpleUIActivity"/>
+        <activity android:name=".view.DataTimeActivity"/>
+        <activity android:name=".view.ProgressBarActivity"/>
+        <activity android:name=".view.SeekBarActivity"/>
 
 
         //handler页面
